# WinUI3-Rust-Demo

./: .gitignore  README.md
.github/workflows/: build.yml  release.yml
scripts/: package.ps1
src/SystemCenter/: App.cs  ReactorCompatibilityExtensions.cs  SystemCenter.csproj  app.manifest
src/SystemCenter/Models/: AppSettings.cs  SystemSnapshot.cs
src/SystemCenter/Services/: SettingsStore.cs  StartupDiagnostics.cs  StartupRegistration.cs  SystemBridge.cs
src/sysbridge/: Cargo.toml
src/sysbridge/src/: main.rs
